# cookiecutter

./: cookiecutter.json
{{cookiecutter.app_name}}/: .env.example  README.md  config.py  cors.py  debug.py  main.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
{{cookiecutter.app_name}}/app/: config.py  cors.py
{{cookiecutter.app_name}}/app/modules/welcome/: controller.py
{{cookiecutter.app_name}}/app/views/: welcome.html
